takamaka_examples/src/takamaka/tests/errors/inconsistentpayable1/Sub.java
package takamaka.tests.errors.inconsistentpayable1;

import io.takamaka.code.lang.Entry;

public class Sub extends Super {
	public @Entry void m() {}
}